First compilation  of drafts contributed by Dmitrij and Vladimir.

--- a/iros.bib
+++ b/iros.bib
@@ -288,4 +288,22 @@ address = {Natick, Massachusetts}
   publisher={Springer}
 }
 
+@online{Erlang:2013:Online,
+    key = {Ericsson Computer Science Laboratory},
+    title = {Erlang/{OTP}},
+    url = {http://www.erlang.org/}
+}
+
+@online{Akka:2013:Online,
+    key = {Typesafe Inc.},
+    title = {Akka toolkit},
+    url = {http://akka.io/}
+}
+
+@online{GoogleMaps:2013:Online,
+    key = {Google Inc.},
+    title = {Google Maps API},
+    url = {http://maps.google.com}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
